--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -48,6 +48,7 @@ img {
   bottom: 0;
   left: 0;
   right: 0;
+  overflow-y: scroll;
 }
 
 .logo {
